--- a/tmuxPack/makefile
+++ b/tmuxPack/makefile
@@ -2,3 +2,5 @@ install:
 	git clone https://github.com/gpakosz/.tmux.git ${HOME}/.tmux
 	ln -s -f ${HOME}/.tmux/.tmux.conf
 	cp ${HOME}/.tmux/.tmux.conf.local .
+	cat ./tmux.conf >> ${HOME}/.tmux/.tmux.conf.local
+
